Fix: style.less

--- a/client/style/style.less
+++ b/client/style/style.less
@@ -1911,7 +1911,7 @@ main {
                 }
             }
         }
-
+    }
     & .btn-change {
         transform: translateY(-.6rem);
     }
