--- a/client/style/style.less
+++ b/client/style/style.less
@@ -1209,6 +1209,7 @@ main {
                 background-color: lighten(@quaternary-white, 5%);
                 padding: 0.8rem;
                 border-radius: .2rem;
+                word-break: break-all;
 
                 & .left-data,
                 .right-data {
@@ -1755,11 +1756,12 @@ main {
 //Mobile
 @media (max-width: 767px) {
     main {
+        width: 100%;
         & .dinamic-content {
+            width: 100%;
             padding: 4.5rem 1rem 0rem 1rem;
 
-            &,
-            .form-content {
+            & .form-content {
                 & form {
                     & .form-inputs {
                         & .description {
@@ -1768,6 +1770,14 @@ main {
                     }
                 }
             }
+        }
+    }
+
+    #project{
+        & .dinamic-content{
+            width: 100%;
+            padding-left: 1rem;
+            padding-right: 1rem;
         }
     }
 
