--- a/client/style/style.less
+++ b/client/style/style.less
@@ -1477,6 +1477,9 @@ main {
                 background-color: #303030;
                 border: 0.03rem solid @terciary-white;
                 border-radius: 5rem;
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
 
                 & .btn-send-photo {
                     background: @background-red;
