--- a/client/style/style.less
+++ b/client/style/style.less
@@ -789,7 +789,7 @@ main {
     & .form-inputs {
         gap: 0.2rem;
 
-        & input {
+        & input,select {
             background: transparent;
             border: 0.01rem solid #707070;
             border-radius: 0.2rem;
